add John Grundy notes
mostly in comments

--- a/dp-2016.tex
+++ b/dp-2016.tex
@@ -76,7 +76,12 @@ hyperfootnotes=true]{hyperref}
 
 \subsubsection*{PROJECT TITLE}
 
+\textbf{Live <domain-specific> visual programming for complex data
+  analytics software}
+
 \subsubsection*{AIMS AND BACKGROUND}
+
+\paragraph{Aims}
 
 The modern world is saturated with computing power, with contemporary
 smart phones outperforming the original Cray~1 supercomputer by three
@@ -126,6 +131,66 @@ high-performance scientific computing (HPSC), enabling scientists and
 programmers to be more productive and take better advantage of the
 modern computing landscape to do good science.
 
+\paragraph{Background}
+
+% \begin{itemize}
+% \item in a data-centric world, we need lots of big data-oriented
+%   software incl data processing and visualisation
+% \item current techniques include BI software, data mining/machine
+%   learning software, scientific software, social media analysis
+%   software, \ldots
+% \item sorts of things we want to answer include compute behaviours of
+%   new materials (science); find important trends (business); learn
+%   about phenomenon (social sciences); discover relationships
+%   (statistics); \ldots
+% \item these not well-addressed by current solutions. We need: more
+%   involvement of end users in specifying and realising solutions;
+%   better way to model the analysis workflow ; more abstract and visual
+%   way to specify and generate complex data analysis algorithms and
+%   code ; live update of complex analysis software from visual models ;
+%   visualisations of parts and whole large data sets ; live update of
+%   visualisations as change visual specifications for interactive
+%   feedback to users
+% \end{itemize}
+
+% Want to bring the idea of "liveness" to HPC/big data software – allow
+% developers to get rapid, incremental update of target data process
+% algs ; allow developers to get near-instantaneous feedback on input of
+% changes to outputs data via rich visualisations
+
+% Want to leverage domain-specific visual languages to specify these big
+% data analysis problems to enable end users a high-level, controlled
+% environment c.f. R-type scripting, code, BI configs etc
+
+% Want to leverage rich information visualisations to provide small
+% snapshot and overall output understanding by end users
+
+% % << Worth a big picture "concept diagram" here >>
+
+% The aim of this project is thus to invent a new approach to specifying
+% and realizing data-centric software systems using live visual
+% programming and data visualisation we break into specific aims:
+
+% - SDL++ for data analytics
+% - Live visual programming of data analytics - DSVLs
+% - extempore -> live update of GPU/HPC/IR/ML algs etc
+% - live visualisations of complex data analytics alg data for feedback,
+%   output
+% - evaluate effectiveness by apply to several exemplars e.g. particles,
+%   big data analysis, infoVis...
+
+% BACKGROUND
+
+% - live programming
+% - live programming applications to date
+% - HPC software
+% - Data mining \& Machine learning software
+% - BI software
+% - DSLs, DSVLs ; applied to above
+% - information visualisation
+% - live infoVis
+
+
 \subsubsection*{RESEARCH PROJECT}
 
 \parencite{Mattoso}
@@ -140,11 +205,68 @@ modern computing landscape to do good science.
 Computational steering: how's that working out for you?
 
 
+\paragraph{Research significance}
+
+% Big data software, HPC software becoming massively important
+% Development of both still rudimentary, limited Little use of
+% "liveness" concept in HPC/DSVLs to date (some in InfoVis) Many
+% applications of our approach ; very enabling technology Examples might
+% include\ldots
+
+\paragraph{Advancing the knowledge base with innovation}
+
+% - very limited use of "liveness" concept to date in BI, HPC, etc ;
+%   adding into these very novel
+% - limited DSVLs leveraged to date in these domains ; enables end users
+% - InfoVis well studied but specification low-level, limited ; enables
+%   greater generality
+% - running the concept of "liveness" through these: DSVLs <-> HPC/Big
+%   Data code <-> InfoVis
+
+\paragraph{Conceptual framework}
+
+% Series of research problems to be solved
+
+% 1. Add ability to modify HPC/Big Data code while running – "liveness"
+
+% 2. Invent set of DSVLs for specifying such applications
+
+% 3. Use DSVLs to generate code / modify code (via 2, 1 above)
+
+% 4. Specifying rich, live InfoVis solution for data processed (by 1 above)
+
+% 5. Evaluate effectivess on set of exemplars
+
+\paragraph{Feasibility, methodology and timeline}
+
+% -set of steps
+% -set of prototype interations
+% Work per quarter
+
+\paragraph{Outcomes and impact}
+
+
+
+
+\paragraph{National benefit and strategic research priorities}
+
+
+
 \subsubsection*{ROLE OF PERSONNEL}
 
 
 
 \subsubsection*{RESEARCH ENVIRONMENT}
+
+\paragraph{Existing research environment}
+
+
+
+\paragraph{Developing research environment}
+
+
+
+\paragraph{Collaboration, communication and commercialization}
 
 
 
