--- a/dp-2016.tex
+++ b/dp-2016.tex
@@ -39,6 +39,7 @@ doi=true
 % \AtEveryCitekey{\clearfield{month}}
 
 \addbibresource{dp-2016.bib}
+\addbibresource{ben-papers.bib}
 
 \usepackage[english=british,threshold=15,thresholdtype=words]{csquotes}
 \SetCiteCommand{\parencite}
